--- a/src/custom.css
+++ b/src/custom.css
@@ -22,7 +22,7 @@
 }
 
 /* defaultspace.css:148 */
-.ck-content .widget ul {
+.ck-content ul {
   list-style: disc !important;
   margin: 1em 1em 1em 1.25em !important;
 }
